# cas

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
doc/: build.md  cli.md  dependencies.md  index.md  style.md  testing.md
src/: cas_acts.c  cas_acts.h  cas_cfg.h  cas_cli.c  cas_cli.h  cas_config.h  cas_core.c  cas_core.h  cas_ctrl.c  cas_ctrl.h  cas_evnt.c  cas_evnt.h  cas_log.c  cas_log.h  cas_udsc.c  cas_udsc.h  cas_udsp.c  cas_udsp.h  cas_udss.c  cas_udss.h  cas_utils.c  cas_utils.h  cas_ver.c  cas_ver.h  cas_version.c  cas_version.h  main.c
tests/: test_cas_cli.c  test_cas_log.c  test_cas_log_small_buffer.c  test_cas_service.c
